plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.hibernate.orm' version '6.3.1.Final'
    id 'org.graalvm.buildtools.native' version '0.9.28'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_23
    targetCompatibility = JavaVersion.VERSION_23
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'io.jsonwebtoken:jjwt:0.13.0'
    implementation 'org.postgresql:postgresql'
    implementation 'org.hibernate.orm:hibernate-spatial:7.0.0.Alpha2'
    implementation 'net.datafaker:datafaker:2.3.1'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'io.soabase.record-builder:record-builder-processor:47'
    compileOnly 'io.soabase.record-builder:record-builder-core:47'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework:spring-webflux'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql:1.20.0'
    testImplementation 'org.hibernate.orm:hibernate-spatial:7.0.0.Alpha2'
    testImplementation("org.hamcrest:hamcrest:3.0")
    testImplementation "org.testcontainers:testcontainers:2.0.2"
}

test {
    useJUnitPlatform()
}